# mirofish

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py
backend/app/api/: graph.py  (+5 more)
backend/scripts/: run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
backend/templates/: crisis_comms.json  geopolitical_conflict.json  ma_reaction.json  regulatory_impact.json
backend/tests/: conftest.py  test_api_health.py  test_config_llm_cache_max_age.py  test_config_version.py  test_entity_reader_get_entities_by_type.py  test_graph_builder_get_data.py  test_graph_query_validate.py  test_graph_tools_subqueries.py  test_hooks_api.py  test_llm_cache.py  test_llm_client.py  test_ontology_generator_python_code.py  test_ontology_response.py  test_phase_completion_api.py  test_project_list_owner.py  test_report_agent_plan_outline.py  test_report_agent_refined_sections.py  test_report_manager_agent_log.py  test_report_narrative_fallback_chunks.py  test_report_outline_context.py  test_report_pdf_html.py  test_report_simulation_index.py  test_simulation_batch_api.py  test_simulation_compare_and_cleanup.py  test_simulation_compare_api.py  test_simulation_interview_routes.py  test_simulation_manager_update_status.py  test_simulation_runner_models.py  test_simulation_runner_platforms.py  test_templates_path.py  test_templates_put_id.py  test_twitter_profiles.py  test_webhook_dlq.py  test_webhook_service.py  (+2 more)
(+142 files in other folders)
